# Chat

./: .gitmodules  CMakeLists.txt  README.md  build.sh  build_all.sh  client  server  server.cpp
API/: CMakeLists.txt
API/include/: Messages.h
API/src/: Messages.cpp  Utils.cpp
Client/: Client.cpp  Client.h  build.sh  client.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled.pro
Server/: CMakeLists.txt  Client.cpp  Client.h  Message.h  Room.cpp  Room.h  Server.cpp  Server.h  build.sh  database.db  main.cpp  server.cpp
Server/include/: Account.h  Client.h  DB.h  Room.h  Server.h  Utils.h
Server/src/: Client.cpp  DB.cpp  Messages.cpp  Room.cpp  Server.cpp  Utils.cpp  main.cpp
Server/tests/: genTestPacket.cpp  log.txt  test.pkg  test.sh  tester
